--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EFAA</title>
+    <title>Verde Vida</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,6 +13,7 @@
 <body>
     <header id="hd">
         <img id="tvimg" src="terrav.png" alt="">
+        <h1 id="nome">Verde Vida</h1>
         <div class="btns">
         <button id="btn_ong">ONG's</button>
         <div class="wrap">
@@ -20,7 +21,15 @@
           </div>
         </div>
     </header>
-    <h1>O Que E Meio Ambiente</h1>
+    <div class="container">
+        <h1 id="cons"></h1>
+        <img id="mpd" src="mapa.png" alt="">
+    </div>
+    <footer id="ft">
+        <h1 id="tft">Verde Vida</h1>
+        <img id="flh" src="https://cdn-icons-png.flaticon.com/512/188/188333.png" alt="">
+        <h2 id="sft">Juntos na luta pela natureza</h2>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
