--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
           </div>
         </div>
     </header>
-    <div class="container">
-        <h1 id="cons"></h1>
+    <div id="ctn" class="container">
+        <h1 id="cons">A Amazônia já perdeu mais de 12.000km² de sua floresta por causa de desmatamentos e queimadas na região.</h1>
         <img id="mpd" src="mapa.png" alt="">
     </div>
     <footer id="ft">
