--- a/index.html
+++ b/index.html
@@ -12,18 +12,33 @@
 </head>
 <body>
     <header id="hd">
+        <div class="vv">
         <img id="tvimg" src="terrav.png" alt="">
         <h1 id="nome">Verde Vida</h1>
+        <div class="borda"></div>
+    </div>
         <div class="btns">
         <button id="btn_ong">ONG's</button>
         <div class="wrap">
             <button class="btn">Home</button>
           </div>
+          <div class="borda2"></div>
         </div>
     </header>
     <div id="ctn" class="container">
         <h1 id="cons">A Amazônia já perdeu mais de 12.000km² de sua floresta por causa de desmatamentos e queimadas na região.</h1>
         <img id="mpd" src="mapa.png" alt="">
+    </div>
+    <div class="ctmain">
+        <div class="cont1">
+
+        </div>
+        <div class="cont2">
+
+        </div>
+        <div class="cont3">
+
+        </div>
     </div>
     <footer id="ft">
         <h1 id="tft">Verde Vida</h1>
