--- a/index.html
+++ b/index.html
@@ -29,15 +29,21 @@
         <h1 id="cons">A Amazônia já perdeu mais de 12.000km² de sua floresta por causa de desmatamentos e queimadas na região.</h1>
         <img id="mpd" src="mapa.png" alt="">
     </div>
+    <div class="ongs"></div>
     <div class="ctmain">
         <div class="cont1">
-
+            <h1>Desmatamentos</h1>
+            <img id="mpdgf" src="mapagf.gif" alt="">
+            <p>Por mais que a taxa de desmatamento na floresta Amazônica seja alta, em 2023 ela apresentou uma queda de 42,5% em comparação ao primeiro semestre de 2022, sendo esses desmatamentos motivados pelas atividades agropecuárias.</p>
         </div>
         <div class="cont2">
-
+            <img src="https://cdn-icons-png.flaticon.com/512/7274/7274276.png" alt="">
+            <p>A floresta Amazônica está em uma preocupante situação, contendo altas taxas de desmatamentos e de queimadas na região, o que está destruindo a floresta responsável por grande parte da biodiversidade do Brasil. Nós podemos diminuir essa destruição reduzindo os níveis de desmatamento e replantando as árvores que foram derrubadas.</p>
         </div>
         <div class="cont3">
-
+            <h1>Queimadas</h1>
+            <img src="grafico.jpg" alt="">
+            <p>Um dos maiores motivos para haver queimadas na floresta Amazônica é a liberação de espaço para a pastagem ou plantações, sendo provocados por agricultores de maneira criminosa. O maior índice de queimadas foi de 73.141 focos de incêndio em setembro de 2007.</p>
         </div>
     </div>
     <footer id="ft">
