--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
         <h1 id="cons">A Amazônia já perdeu mais de 12.000km² de sua floresta por causa de desmatamentos e queimadas na região.</h1>
         <img id="mpd" src="mapa.png" alt="">
     </div>
-    <div class="ongs"></div>
+    <div class="ongs">
+        <div id="ong1">
+
+        </div>
+    </div>
     <div class="ctmain">
         <div class="cont1">
             <h1>Desmatamentos</h1>
