--- a/index.html
+++ b/index.html
@@ -15,23 +15,41 @@
         <div class="vv">
         <img id="tvimg" src="terrav.png" alt="">
         <h1 id="nome">Verde Vida</h1>
-        <div class="borda"></div>
     </div>
+    <div class="borda"></div>
         <div class="btns">
         <button id="btn_ong">ONG's</button>
         <div class="wrap">
             <button class="btn">Home</button>
           </div>
-          <div class="borda2"></div>
         </div>
+        <div class="borda2"></div>
     </header>
     <div id="ctn" class="container">
         <h1 id="cons">A Amazônia já perdeu mais de 12.000km² de sua floresta por causa de desmatamentos e queimadas na região.</h1>
         <img id="mpd" src="mapa.png" alt="">
     </div>
     <div class="ongs">
+        <div id="titong">
+            <h1>Ong's</h1>
+        </div>
         <div id="ong1">
-
+            <a href="https://ipe.org.br/">IPE - Instituto de Pesquisas Ecológicas </a>
+            <div id="textong1">
+            <p>Responsável por cuidar da Mata Atlântica, da Amazônia, do Pantanal e do Cerrado, protegendo a biodiversidade e promovendo a educação ambiental.</p>
+        </div>
+        </div>
+        <div id="ong2">
+            <a href="https://fas-amazonia.org/">FAS - Fundação Amazonas Sustentável</a>
+            <div id="textong1">
+                <p>A FAS trabalha para perpetuar a vida da Amazônia promovendo as oficinas de salvaguardas socioambientais, sendo contra ao desmatamento e queimadas de árvores.</p>
+            </div>
+        </div>
+        <div id="ong3">
+            <a href="https://www.socioambiental.org/">ISA - Instituto Socioambiental</a>
+            <div id="textong1">
+                <p>Atua na defesa de bens e de direitos relacionados ao meio ambiente, patrimônio cultural, direitos humanos e dos povos indígenas e tradicionais.</p>
+            </div>
         </div>
     </div>
     <div class="ctmain">
