--- a/index.html
+++ b/index.html
@@ -13,15 +13,18 @@
 <body>
     <header id="hd">
         <div class="vv">
-        <img id="tvimg" src="terrav.png" alt="">
-        <h1 id="nome">Verde Vida</h1>
-    </div>
+            <img id="tvimg" src="terrav.png" alt="">
+            <h1 id="nome">Verde Vida</h1>
+        </div>
     <div class="borda"></div>
+    <div id="situa">
+        <h1>A Situação da Amazônia</h1>
+    </div>
         <div class="btns">
-        <button id="btn_ong">ONG's</button>
-        <div class="wrap">
-            <button class="btn">Home</button>
-          </div>
+            <button id="btn_ong">ONG's</button>
+            <div class="wrap">
+                <button class="btn">Home</button>
+            </div>
         </div>
         <div class="borda2"></div>
     </header>
@@ -36,8 +39,8 @@
         <div id="ong1">
             <a href="https://ipe.org.br/">IPE - Instituto de Pesquisas Ecológicas </a>
             <div id="textong1">
-            <p>Responsável por cuidar da Mata Atlântica, da Amazônia, do Pantanal e do Cerrado, protegendo a biodiversidade e promovendo a educação ambiental.</p>
-        </div>
+                <p>Responsável por cuidar da Mata Atlântica, da Amazônia, do Pantanal e do Cerrado, protegendo a biodiversidade e promovendo a educação ambiental.</p>
+            </div>
         </div>
         <div id="ong2">
             <a href="https://fas-amazonia.org/">FAS - Fundação Amazonas Sustentável</a>
