--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     </header>
     <div id="ctn" class="container">
         <h1 id="cons">A Amazônia já perdeu mais de 12.000km² de sua floresta por causa de desmatamentos e queimadas na região.</h1>
+        <a href="mapa.png">
         <img id="mpd" src="mapa.png" alt="">
+        </a>
     </div>
     <div class="ongs">
         <div id="titong">
@@ -58,7 +60,9 @@
     <div class="ctmain">
         <div class="cont1">
             <h1>Desmatamentos</h1>
+            <a href="mapagf.gif">
             <img id="mpdgf" src="mapagf.gif" alt="">
+            </a>
             <p>Por mais que a taxa de desmatamento na floresta Amazônica seja alta, em 2023 ela apresentou uma queda de 42,5% em comparação ao primeiro semestre de 2022, sendo esses desmatamentos motivados pelas atividades agropecuárias.</p>
         </div>
         <div class="cont2">
@@ -67,7 +71,9 @@
         </div>
         <div class="cont3">
             <h1>Queimadas</h1>
+            <a href="grafico.jpg">
             <img src="grafico.jpg" alt="">
+            </a>
             <p>Um dos maiores motivos para haver queimadas na floresta Amazônica é a liberação de espaço para a pastagem ou plantações, sendo provocados por agricultores de maneira criminosa. O maior índice de queimadas foi de 73.141 focos de incêndio em setembro de 2007.</p>
         </div>
     </div>
