--- a/cursos.html
+++ b/cursos.html
@@ -13,6 +13,15 @@
 </head>
 <body>
     <header>
+        <a href="index.html">
+        <button>index</button>
+        <a href="index.html">
+         <button type="button" class="voltar">voltar</button>
+        </a>
+        
+         <button class="cadastrar-se">cadastrar-se</button>
+
+
         <div class="foto">
         <img src="folhas.png" alt="folhas" class="imagemajustada">
         <h1 class="VerdeVida">VerdeVida</h1>
